# dx12-renderer

./: .editorconfig  AGENTS.md  CMakeLists.txt  CMakePresets.json
CMakeIncludes/: CopyAssets.cmake  CopyDLLs.cmake  ProjectBase.cmake  ProjectBasePost.cmake
DX12Library/: CMakeLists.txt
DX12Library/include/DX12Library/: Application.h  CommandList.h  CommandQueue.h  IndexBuffer.h  ShaderUtils.h  VertexBuffer.h  Window.h
DX12Library/src/: Application.cpp  CommandList.cpp  CommandQueue.cpp  IndexBuffer.cpp  RootSignature.cpp  ShaderUtils.cpp  UploadBuffer.cpp  VertexBuffer.cpp  Window.cpp
DXR/: CMakeLists.txt
DXR/include/DXR/: RaytracingPipeline.h  RaytracingRenderer.h  RaytracingScene.h  RaytracingTypes.h  ShaderTable.h
DXR/src/: RaytracingPipeline.cpp  RaytracingRenderer.cpp  RaytracingScene.cpp  ShaderTable.cpp
Demos/AnimationsDemo/shaders/: AnimationsDemo_VS.hlsl
Demos/AnimationsDemo/src/: AnimationsDemo.cpp
Demos/DeferredLightingDemo/src/: DeferredLightingDemo.cpp  Reflections.cpp  Ssao.cpp
Demos/GrassDemo/shaders/: Grass_PS.hlsl
Demos/LightingDemo/src/: ParticleSystemPso.cpp  PostFxPso.cpp  ShadowPassPsoBase.cpp
Demos/MeshletsDemo/shaders/: Meshlet_VS.hlsl
Demos/MeshletsDemo/src/: MeshletsDemo.cpp  RenderGraph.User.cpp
Demos/RaytracingDemo/: CMakeLists.txt
Demos/RaytracingDemo/include/: RaytracingDemo.h  RenderGraph.User.h
Demos/RaytracingDemo/include/Passes/: NrdPass.h  RaytracingDemoPassResources.h  RaytracingDemoPasses.h  SvgfPass.h
Demos/RaytracingDemo/include/Scene/: SceneLighting.h
Demos/RaytracingDemo/shaders/: RaytracingDemo_GBuffer_PS.hlsl  RaytracingDemo_GBuffer_VS.hlsl  RaytracingDemo_InlineRT_CS.hlsl  RaytracingDemo_RT.hlsl  RaytracingDemo_RT_GBuffer.hlsli  RaytracingDemo_RT_Lighting.hlsli  RaytracingDemo_RT_Random.hlsli  RaytracingDemo_RT_Types.hlsli
Demos/RaytracingDemo/shaders/Common/: PathTracingConstants.hlsli  RayOffset.hlsli
Demos/RaytracingDemo/shaders/GBuffer/: GBuffer.ps.hlsl  GBuffer.vs.hlsl  GBufferLayout.hlsli  GBufferSampling.hlsli
Demos/RaytracingDemo/shaders/LightBillboard/: LightBillboard.ps.hlsl  LightBillboard.vs.hlsl
Demos/RaytracingDemo/shaders/NRD/: NrdComposite.cs.hlsl  NrdPrepare.cs.hlsl
Demos/RaytracingDemo/shaders/PathTracing/: DirectLighting.cs.hlsl  IndirectLighting.cs.hlsl  InlinePathTracing.cs.hlsl  LightingComposite.cs.hlsl  PathTracing.rayquery.hlsli  PathTracing.rt.hlsl  PathTracing.rt.hlsli  PathTracingGeometry.hlsli  PathTracingPayload.hlsli  PathTracingRandom.hlsli  PathTracingShared.hlsli  PathTracingSurface.hlsli  PathTracingTypes.hlsli
Demos/RaytracingDemo/shaders/SVGF/: SvgfAtrous.cs.hlsl  SvgfCommon.hlsli  SvgfComposite.cs.hlsl  SvgfTemporal.cs.hlsl
Demos/RaytracingDemo/shaders/Scene/: SceneCamera.hlsli  SceneGeometry.hlsli  SceneLighting.hlsli  SceneResources.hlsli
Demos/RaytracingDemo/shaders/Skybox/: Skybox.ps.hlsl  Skybox.vs.hlsl
Demos/RaytracingDemo/src/: RaytracingDemo.cpp  RenderGraph.User.cpp  main.cpp
Demos/RaytracingDemo/src/Passes/: BaseResourcesPass.cpp  GBufferPass.cpp  ImGuiPass.cpp  LightBillboardPass.cpp  NrdPass.cpp  NrdRenderPass.cpp  PathTracingPass.cpp  RaytracingDemoPassResources.cpp  SetupPass.cpp  SkyboxPass.cpp  SvgfPass.cpp  SvgfRenderPass.cpp
Demos/ToonDemo/src/: DirectionalLightShadowsPass.cpp  ToonDemo.cpp
Framework/: CMakeLists.txt
Framework/include/Framework/: CommonRootSignature.h  ComputePipelineStateBuilder.h  ComputeShader.h  DemoMain.h  DescriptorLayout.h  ImGuiImpl.h  Material.h  Mesh.h  RasterPipelineStateBuilder.h  RayTracingAccelerationStructure.h  RayTracingPipelineStateBuilder.h  RayTracingShader.h  RenderTexture.h  Shader.h  ShaderReflection.h  ShaderResourceView.h
Framework/src/: BloomUpsample.cpp  CommonRootSignature.cpp  ComputePipelineStateBuilder.cpp  ComputeShader.cpp  DescriptorLayout.cpp  ImGuiImpl.cpp  Material.cpp  Mesh.cpp  PipelineStateBuilder.cpp  RasterPipelineStateBuilder.cpp  RayTracingAccelerationStructure.cpp  RayTracingPipelineStateBuilder.cpp  RayTracingShader.cpp  RenderTexture.cpp  Shader.cpp  ShaderReflection.cpp  SharedUploadBuffer.cpp
Shaders/ShaderLibrary/Common/: RootSignature.hlsli
Shaders/ShaderLibrary/RayTracing/: InlineRayTracing.hlsli
